--- a/problems/case5/style.css
+++ b/problems/case5/style.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 20vw;
+  font-size: 26.66666667vw;
 }
 
 @media screen and (max-width: 320px) {
@@ -22,4 +22,8 @@ html, body {
 .flex-button {
   width: 1rem;
   height: 20vh;
+}
+
+.container-hack {
+  font-size: 0;
 }
