--- a/problems/case10/style.css
+++ b/problems/case10/style.css
@@ -19,17 +19,19 @@ html, body {
   padding: 0;
 }
 
-.flex-button {
-  width: .1rem;
-  height: .1rem;
+.container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  font-size: .1rem;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.color-span {
-  background-color: red
-}
-
-.box {
-  height: 20vh;
-  border: 1px solid gray;
-  position: relative;
+.container .li-item {
+  /*width: 20vw;*/
+  display: inline-block;
 }
