Add loader, compositionstart

--- a/problems/case0.7/css/index.css
+++ b/problems/case0.7/css/index.css
@@ -1,7 +1,11 @@
+.self-word {
+  color: green;
+}
+
 .big-pic {
   width: 50px;
   height: 50px;
   border: 1px solid red;
-  background-image: url(../img/qr-s.png);
+  /*background-image: url(../img/qr-s.png);*/
   background-size: cover;
 }
